Allow click to add sections functionality, some bugs...

--- a/www/index.html
+++ b/www/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Starship</title>
+    <title>Layout Editor</title>
     <style>
         html, body {
             margin: 0;
             padding: 0;
             overflow: hidden;
-            background-color: #DDD;
+            background-color: #222;
             -webkit-touch-callout: none;
             -webkit-user-select: none;
             -moz-user-select: none;
@@ -16,7 +16,7 @@
             user-select: none;
         }
 
-        body {
+        .layout-editor {
             display: flex;
             align-items: center;
             justify-content: center;
